--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,17 +3,19 @@ package:
   version: 2020.04.26
 
 source:
-  - git_url: https://github.com/ros-gbp/media_export-release.git
-    git_rev: release/noetic/media_export/0.3.0-1
-    folder: ros-noetic-media-export/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2/0.7.0-1
+    folder: ros-noetic-tf2/src/work
+    patches:
+      - patch/ros-noetic-tf2.patch
 
 build:
-  number: 0
+  number: 1
   skip: true  # [not win64]
 
 outputs:
-  - name: ros-noetic-media-export
-    version: 0.3.0
+  - name: ros-noetic-tf2
+    version: 0.7.0
     requirements:
       build:
         - "{{ compiler('cxx') }}"
@@ -21,10 +23,18 @@ outputs:
         - ninja
         - cmake
       host:
+        - console_bridge
         - python {{ python }}
         - ros-noetic-catkin
+        - ros-noetic-geometry-msgs
+        - ros-noetic-rostime
+        - ros-noetic-tf2-msgs
       run:
+        - console_bridge
         - python {{ python }}
+        - ros-noetic-geometry-msgs
+        - ros-noetic-rostime
+        - ros-noetic-tf2-msgs
     script: bld_catkin.bat
 
 about:
